package in_myfiles.structural_pattern.proxy

interface ThumbnailInterface {
    fun getThumbnailPath(requestPath: String): String?
}